--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   image_picker: ^0.8.7
   google_fonts: ^4.0.3
   persistent_bottom_nav_bar: ^5.0.2
+  flutter_svg: ^2.0.4
+  table_calendar: ^3.0.9
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
