--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^2.0.4
   table_calendar: ^3.0.9
   intl: ^0.18.0
+  date_format: ^2.0.7
 
 dev_dependencies:
   flutter_test:
