--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   table_calendar: ^3.0.9
   intl: ^0.18.0
   date_format: ^2.0.7
+  firebase_core: ^2.11.0
+  firebase_messaging: ^14.5.0
+  flutter_local_notifications: ^14.0.0+1
 
 dev_dependencies:
   flutter_test:
