--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.app">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    
    <application
         android:label="Aether"
         android:name="${applicationName}"
@@ -22,7 +25,7 @@
               />
             <meta-data 
                 android:name="com.google.firebase.messaging.deafult_notification_channel_id"
-                android:value="channel_id_1" />
+                android:value="aether_notification" />
             <meta-data 
                 android:name="com.google.firebase.messaging.deafult_notification_icon"
                 android:resource="@drawable/notification_icon" />
@@ -35,6 +38,7 @@
                 <action android:name="FLUTTER_NOTIFICATION_CLICK"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
+
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
