--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSLocalNotificationsUsageDescription</key>
+	<string>Ova aplikacija koristi notifikacije kako bi vam pružila ažurirane informacije i obavijesti o vašim servisima.</string>
 	<key>CFBundleDisplayName</key>
 	<string>Aether</string>
 	<key>CFBundleExecutable</key>
